[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/CharacterPanel.gd" type="Script" id=2]
[ext_resource path="res://UI/StatusEffectsPanel/StatusEffectsPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/LabeledProgressBar.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Fonts/SourceCodePro/SourceCodePro-Regular.otf"

[sub_resource type="DynamicFont" id=7]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = SubResource( 12 )

[sub_resource type="Gradient" id=10]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[sub_resource type="Gradient" id=8]
resource_local_to_scene = true
colors = PoolColorArray( 0.545098, 0.172549, 0.313726, 1, 0.352941, 0, 0.921569, 1 )

[sub_resource type="Gradient" id=9]
resource_local_to_scene = true
colors = PoolColorArray( 0.270588, 0.172549, 0.545098, 1, 0.678431, 0, 0.870588, 1 )

[sub_resource type="Gradient" id=11]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[node name="CharacterPanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "Character name"

[node name="LevelBar" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 54.0
colorGradient = SubResource( 10 )
propertyName = "Level"

[node name="PainBar" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 1280.0
margin_bottom = 80.0
colorGradient = SubResource( 8 )
propertyName = "Pain"

[node name="LustBar" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 1280.0
margin_bottom = 106.0
colorGradient = SubResource( 9 )
propertyName = "Lust"

[node name="StaminaBar" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 1280.0
margin_bottom = 132.0
colorGradient = SubResource( 11 )
propertyName = "Stamina"

[node name="StatusEffectsPanel" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 1280.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 0 )
showTooltipBelow = true
